decorated cards and fixed alignment

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -260,7 +260,7 @@ header p {
     top: 900px;
     margin: 0% auto;
     flex-flow: column;
-    height: 1500px;
+    height: 1200px;
     -webkit-animation-name: cardseaseout;
     -webkit-animation-delay: 1.1s;
     -webkit-animation-duration: 2s;
@@ -280,14 +280,12 @@ header p {
     text-align: left;
     align-items: center;
     height: 800px;
-    /*box-sizing: border-box;*/
 }
 
 .projectcardstitle {
     display: flex;
     flex-flow: row;
     align-items: center;
-    /*background: orange;*/
     width: 30%;
     height: 100%;
     padding: 0 2% 0 0;
@@ -295,7 +293,6 @@ header p {
 
 .projectcardsdescription {
     display: flex;
-    background: orange;
     align-items: center;
     width: 70%;
     height: 100%;
@@ -305,6 +302,8 @@ header p {
     z-index: 2;
 }
 
+
+
 .pcvcenter {
     display: flex;
     flex-flow: column;
@@ -312,12 +311,9 @@ header p {
     margin: 0 auto;
 }
 
-/*.pchcenter {
-    display: flex;
-    align-items: center;
-    background: yellow;
-    margin: 0 auto;
-}*/
+.pchcenter {
+    padding: 0 0 0 10px;
+}
 
 /*hover bubble animation*/
 
@@ -339,11 +335,23 @@ header p {
   width: 2.5em;
   transition: 0.8s ease;
   border-radius: 0 0 0 100%;
-  background: #E91E63;
+  /*background: #E91E63;*/
   top: 0;
   right: 0;
   position: absolute;
   z-index: 1;
+}
+#b1:before {
+    background: #E91E63;
+}
+#b2:before {
+    background: #2196F3;
+}
+#b3:before {
+    background: #FF5722;
+}
+#b4:before {
+    background: #3F51B5;
 }
 .bubble:hover {
   width: 100%;
@@ -363,7 +371,7 @@ header p {
 .bubble:hover .bubblecontent {
   transition: 0.8s ease;
   top: 50%;
-  right: 0;
+  right: -20px;
   z-index: 4;
 }
 
@@ -388,6 +396,7 @@ header p {
   color: #fff;
   right: -200%;
   padding: 1.2em;
+  margin: 0 auto;
 }
 
 .projectcards p {
